# cucs_demo

./: CMakeLists.txt  README.md
examples/: count_pairs.cpp  count_pairs.py  final_dec.txt  is_sorted.py  print_paris.py  spin_quadrics.txt  spin_quadrics_compress.txt  spin_quadrics_knob.txt  test.txt  to_dec.py
src/: main.cpp
